--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,8 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
+  authorization:
+    denied: "Access denied. You are not authorized to perform this action."
   successfully_created: "%{entity} was successfully created!"
   successfully_updated: "%{entity} was successfully updated!"
   session:
